# asteroidos_wgpu

./: .gitignore
client/: Cargo.toml  keymap.json
client/assets/dev_player/: dev_1.pdn  img_sheet.pdn  other_sheet.pdn  paper.odt  show_1.pdn
client/src/: debug.rs  main.rs  math.rs
client/src/game_logic/: asteroids.rs  mod.rs
client/src/interface/: key_handler.rs  mod.rs
client/src/rendering/: ast_shader.wgsl  asteroid_rendering.rs  gui_rendering.rs  mod.rs  player_rendering.rs  player_shader.wgsl
game_logic/: Cargo.toml
game_logic/src/: asteroids.rs  lib.rs  player.rs
logger/: Cargo.toml
logger/src/: lib.rs
net_types/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
web_types/src/: lib.rs
