[package]
name = "asteroidos_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14"
env_logger = "0.10"
winit = { verison = "0.27.5", features = ["serde"] }
bytemuck = { version = "1.4", features = ["derive"] }
log = "0.4"
pollster = "0.2"
cgmath = "0.18"

image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

egui = "0.19"
egui_wgpu_backend = "0.20"
egui_winit_platform = "0.16.0"

[dependencies.game_logic]
path = "../game_logic"

[dependencies.logger]
path = "../logger"
